# typeparams

./: Params.cabal  README.lhs  README.md  typeparams.cabal
examples/: basic.hs  blog-applicative.lhs  blog-constrainedmonad.lhs  blog-functors.lhs  blog-monad.lhs  blog-partiallyclosed.lhs  blog-rewrite.lhs  coretest.hs  criterion.hs  example1-StaticList.hs  example1-StaticList.lhs  example2-NearestNeighbor.lhs  intro.lhs  supercomp-lebesgue.hs  supercomp.hs
examples/plots/: mkplots.gnu
src/Data/: Params.hs
src/Data/Params/: Applicative.hs  FastVector.hs  Frac.hs  Functor.hs  Instances.hs  ModInt.hs  Monad.hs  PseudoPrim.hs  Vector.hs
src/Data/Params/Vector/: Storable.hs  StorableRaw.hs  Unboxed.hs  UnboxedRaw.hs
